@@ -1,4 +1,0 @@
-gtkmm (previously known as Gtk--) is the official C++ interface for the
-popular GUI library GTK+. Highlights include typesafe callbacks, widgets
-extensible via inheritance and a comprehensive set of widget classes that
-can be freely combined to quickly create complex user interfaces.
