@@ -1,15 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 17:48:53 joerg Exp $
-include/libgnomemm-2.6/libgnomemm.h
-include/libgnomemm-2.6/libgnomemm/init.h
-include/libgnomemm-2.6/libgnomemm/main.h
-include/libgnomemm-2.6/libgnomemm/moduleinfo.h
-include/libgnomemm-2.6/libgnomemm/private/main_p.h
-include/libgnomemm-2.6/libgnomemm/private/moduleinfo_p.h
-include/libgnomemm-2.6/libgnomemm/private/program_p.h
-include/libgnomemm-2.6/libgnomemm/program.h
-include/libgnomemm-2.6/libgnomemm/wrap_init.h
-lib/libgnomemm-2.6.la
-lib/libgnomemm-2.6/include/libgnomemmconfig.h
-lib/libgnomemm-2.6/proc/m4/convert.m4
-lib/libgnomemm-2.6/proc/m4/convert_libgnomemm.m4
-lib/pkgconfig/libgnomemm-2.6.pc
